// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<div>
  <label>
    <input
      class="nxrm-checkbox"
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Checkbox renders correctly with all props 1`] = `
<div>
  <label>
    <input
      checked=""
      class="nxrm-checkbox"
      type="checkbox"
    />
  </label>
</div>
`;
